@@ -261,6 +261,16 @@ APR_DECLARE(apr_status_t) apr_shm_remove(const char *filename,
     return apr_file_remove(filename, pool);
 }
 
+APR_DECLARE(apr_status_t) apr_shm_delete(apr_shm_t *m)
+{
+    if (m->filename) {
+        return apr_shm_remove(m->filename, m->pool);
+    }
+    else {
+        return APR_ENOTIMPL;
+    }
+} 
+
 static apr_status_t shm_attach_internal(apr_shm_t **m,
                                         const char *file,
                                         apr_pool_t *pool,
